Added unaveraged trace to magnetic field plot

--- a/Plotting_scripts/Icarus_paper_plots.ipynb
+++ b/Plotting_scripts/Icarus_paper_plots.ipynb
@@ -66,8 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run=4\n",
-    "save = False # do you want to save your figures?\n",
+    "run=10\n",
+    "save = False# do you want to save your figures?\n",
     "automated = True \n",
     "log_time = True #do you want to plot time logarithmically\n",
     "path = '../Results_combined/Dodds_comp/' #path to files\n",
@@ -237,6 +237,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a6c76e3b",
+   "metadata": {},
+   "source": [
+    "Load in run parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9eafd74c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = pd.read_csv(f'{path}auto_params.csv',skiprows=[1])\n",
+    "params = params[params['run']==run]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "00b5daf1",
    "metadata": {},
    "source": [
@@ -331,6 +350,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1b4fea43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_time = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "893c3034",
    "metadata": {},
    "outputs": [],
@@ -397,10 +426,11 @@
     "plt.plot(tpt[f<f0],f[f<f0]*rc/1e3,linestyle='-.',color='black',label='Top of liquid core')\n",
     "#labels and limits\n",
     "plt.ylabel('Distance from centre of planetesimal/km')\n",
-    "plt.xlabel('log(Time / Ma)')\n",
+    "plt.xlabel('Time / Ma')\n",
     "plt.colorbar(label='Temperature/K')\n",
     "plt.ylim(bottom=0)\n",
     "plt.legend(bbox_to_anchor=[1.4,0.5])\n",
+    "plt.xscale('log')\n",
     "if save == True:\n",
     "    plt.savefig(f'{save_path}run_{run}_thermal_profile.pdf',bbox_inches='tight',dpi=500)"
    ]
@@ -421,8 +451,9 @@
    "outputs": [],
    "source": [
     "tacc = 0.8 #accretion time in Ma\n",
-    "tsint = np.zeros([1000])\n",
-    "for i in range(1000):\n",
+    "rlen = int((r/1e3)*2)\n",
+    "tsint = np.zeros([rlen])\n",
+    "for i in range(rlen):\n",
     "    tsint[i]=tall[Tall[i,:]>700][0]\n",
     "tshort = np.min(tsint/Myr-tacc)\n",
     "print(f'The shortest time before sintering is {tshort:.2f} Ma \\\n",
@@ -439,6 +470,32 @@
     "rcheck = rplot[:-1] #remove surface point\n",
     "rsint = rcheck[(tsint/Myr)>(tshort+tacc)]\n",
     "print(f'The inner {rsint[0]}km sinters within {tshort:.1f} Ma of accretion')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f255fa50",
+   "metadata": {},
+   "source": [
+    "How long is the planetesimal above rcmf?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f2b63af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tacc = 0.8 #accretion time in Ma\n",
+    "rlen = int((r/1e3))\n",
+    "trcmf = np.zeros([rlen])\n",
+    "rcmf = params['rcmf'].values[0]\n",
+    "for i in range(rlen):\n",
+    "    trcmf[i]=tall[Tall[nmantle+i,:]>(rcmf*(400)+1400)][-1]\n",
+    "\n",
+    "print(f'The shortest time before T<T_C is {np.min(trcmf/Myr-tacc):.2f} Ma \\\n",
+    "and the longest time before T<T_C is {np.max(trcmf/Myr-tacc):.2f} Ma')"
    ]
   },
   {
@@ -465,7 +522,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save = True"
+    "log_time = True"
    ]
   },
   {
@@ -485,7 +542,7 @@
     "plt.plot(t_plot_t,Tc,label='central core temperature',color='black')\n",
     "plt.plot(t_plot_t[Tm_conv!=0],Tm_conv[Tm_conv!=0],label='convective mantle temperature',color='#FF5350')\n",
     "plt.plot(t_plot_t[Tm_conv==0],T_profile[Tm_conv==0,nmantle+dl_end+2],label='conductive mantle temperature',color='#FF5350',linestyle='dashed')\n",
-    "\n",
+    "plt.plot(t_plot_t,Tcmb)\n",
     "if log_time == True:\n",
     "    plt.xscale('log')\n",
     "plt.ylim([1300,1550])\n",
@@ -501,7 +558,7 @@
     "plt.scatter(t_plot_t[Fcmb<0],abs(Fcmb_neg),label='$-F_{CMB}$',color='#5BC0EB',s=2)\n",
     "plt.scatter(t_plot_t[Fcmb>0],Fcmb_pos,label='$F_{CMB}$',color='#5F0F40',s=2)\n",
     "plt.semilogy(t_plot_t,Fad,label='$F_{ad}$',color='#E36414',linestyle='dashed')\n",
-    "plt.semilogy(t_plot_t,Frad,label='$F_{rad}$',color='#9A031E',linestyle='dotted')\n",
+    "plt.semilogy(t_plot_t,Frad,label='$F_{rad}$',color='#9A031E',linestyle='-.')\n",
     "plt.fill_betweenx(y=[1e-4,100],x1=tstrat_remove,x2=terode,label='erosion of stratification',alpha=0.2)\n",
     "plt.fill_betweenx(y=[1e-4,100],x1=fcond_t,x2=max(t_plot_t),label='mantle conducting',alpha=0.2)\n",
     "plt.fill_betweenx(y=[1e-4,1e-3],x1=on1,x2=off1,label='dynamo on',alpha=0.2,color='grey')\n",
@@ -622,24 +679,15 @@
     "\n",
     "#thermal and compositional buoyancy flux\n",
     "ln3 = ax[1].plot(t_plot_t[f>=f0],therm[f>=f0],color='black')\n",
+    "#ax[1].plot(t_plot_t[f<f0],therm[f<f0],color='black',alpha=0.1)\n",
     "ax[1].plot(t_plot_t[f<f0],thermdf.rolling(window=wn,center=True).mean(),color='black')\n",
-    "ln4 = ax[1].plot(t_plot_t[f>=f0],comp[f>=f0],color='darkorchid')\n",
-    "ax[1].plot(t_plot_t[f<f0],compdf.rolling(window=wn,center=True).mean(),color='darkorchid')\n",
+    "ax[1].plot(t_plot_t[f<f0],comp[f<f0],color='darkorchid',alpha=0.1)\n",
+    "ln4=ax[1].plot(t_plot_t[f<f0],compdf.rolling(window=wn,center=True).mean(),color='darkorchid')\n",
     "ax[1].legend(ln3+ln4,['thermal','compositional'])\n",
-    "ax[1].set(xscale='log',yscale='log',ylim=[1e-11,1e-8],ylabel='Buoyancy flux /kg$s^{-1}$',xlabel='Time/Ma')\n",
+    "ax[1].set(xscale='log',ylim=[1e-11,1e-8],ylabel='Buoyancy flux per unit area /kg$s^{-1}m^{-2}$',xlabel='Time/Ma')\n",
     "\n",
     "if save == True:\n",
     "    plt.savefig(f'{save_path}run_{run}_Bbuoy.png',dpi=500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "033ec2a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save = True"
    ]
   },
   {
@@ -686,7 +734,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run = 3\n",
+    "run = 5\n",
     "r_run2, dr2, tstart2, dt2, viscosity2, icfrac2 = load_run_info(run,f'{path}auto_params.csv')\n",
     "npzfile = np.load(f'{path}run_{run}.npz')\n",
     "\n",
