Mask averaged B field when Rem is subcritical

--- a/Plotting_scripts/Icarus_paper_plots.ipynb
+++ b/Plotting_scripts/Icarus_paper_plots.ipynb
@@ -66,11 +66,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run=10\n",
+    "run=6\n",
     "save = False# do you want to save your figures?\n",
-    "automated = True \n",
+    "automated = False \n",
     "log_time = True #do you want to plot time logarithmically\n",
-    "path = '../Results_combined/Dodds_comp/' #path to files\n",
+    "#path = '../Results_combined/Dodds_comp/' #path to files\n",
+    "path = '../Results_combined/'\n",
     "save_path = '../Plots/Icarus_paper/'"
    ]
   },
@@ -250,8 +251,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = pd.read_csv(f'{path}auto_params.csv',skiprows=[1])\n",
-    "params = params[params['run']==run]"
+    "if automated == True:\n",
+    "    params = pd.read_csv(f'{path}auto_params.csv',skiprows=[1])\n",
+    "    params = params[params['run']==run]\n",
+    "else:\n",
+    "    params = pd.read_csv(f'{path}run_info.csv',skiprows=[1])\n",
+    "    params = params[params['run']==run]"
    ]
   },
   {
@@ -734,8 +739,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run = 5\n",
-    "r_run2, dr2, tstart2, dt2, viscosity2, icfrac2 = load_run_info(run,f'{path}auto_params.csv')\n",
+    "run = 7\n",
+    "if automated == True:\n",
+    "    r_run2, dr2, tstart2, dt2, viscosity2, icfrac2 = load_run_info(run,f'{path}auto_params.csv')\n",
+    "else:\n",
+    "    r_run2, dr2, tstart2, dt2, viscosity2, icfrac2 = load_run_info(run,f'{path}run_info.csv')\n",
     "npzfile = np.load(f'{path}run_{run}.npz')\n",
     "\n",
     "f2 = npzfile['f'] \n",
@@ -789,13 +797,18 @@
     "wn = 200 #averaging window width\n",
     "fig, ax = plt.subplots(nrows=2,ncols=1,sharex='col',figsize=[10,6])\n",
     "#B and Rem\n",
-    "\n",
+    "t_plot_solid = t_plot_t[f<f0]\n",
+    "t_plot_solid2 = t_plot_t2[f2<f0]\n",
     "# B - icfrac = 0\n",
     "#ln1 = ax[0].plot(t_plot_t[f>=f0],np.ma.masked_where(Rem[f>=f0]<10,B[f>=f0]),color='#0000ca')\n",
-    "ln1 = ax[0].plot(t_plot_t[f<f0],Bdf.rolling(window=wn,center=True).mean(),color='#0000ca')\n",
+    "ln1 = ax[0].plot(np.ma.masked_where(Remdf.rolling(window=wn,center=True).mean()<10,t_plot_solid),\\\n",
+    "                 np.ma.masked_where(Remdf.rolling(window=wn,center=True).mean()<10,Bdf.rolling(window=wn,center=True).mean()),\\\n",
+    "                 color='#0000ca')\n",
     "#icfrac = 1\n",
     "#ln2 = ax[0].plot(t_plot_t2[f2>=f0],np.ma.masked_where(Rem2[f2>=f0]<10,B2[f2>=f0]),color='#0079cb')\n",
-    "ln2 = ax[0].plot(t_plot_t2[f2<f0],Bdf2.rolling(window=wn,center=True).mean(),color='#0079cb')\n",
+    "ln2 = ax[0].plot(np.ma.masked_where(Remdf2.rolling(window=wn,center=True).mean()<10,t_plot_solid2),\\\n",
+    "                 np.ma.masked_where(Remdf2.rolling(window=wn,center=True).mean()<10,Bdf2.rolling(window=wn,center=True).mean()),\\\n",
+    "                 color='#0079cb')\n",
     "# Rem  icfrac = 0\n",
     "#ln3 = ax[1].plot(t_plot_t[f>=f0],Rem[f>=f0],color='#0000ca')\n",
     "ln3 = ax[1].plot(t_plot_t[f<f0],Remdf.rolling(window=wn,center=True).mean(),color='#0000ca')\n",
