Added plots for explaining magnetic field epochs

--- a/Plotting_scripts/Icarus_paper_plots.ipynb
+++ b/Plotting_scripts/Icarus_paper_plots.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "\n",
     "### Example run\n",
-    "These plots are for runs which are comparable to Case 1 of instantaneous accretion in [Dodds et. al. 2021](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2020JE006704). r=500km, $t_{acc}$=0.8 Ma after CAI formation, $X_{S,0}$=27.1 wt%, all other parameters are median values from Sanderson et. al. 2024 (EPSL. in review).\n",
+    "These plots are for runs which are comparable to Case 1 of instantaneous accretion in [Dodds et. al. 2021](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2020JE006704). r=500km, $t_{acc}$=0.8 Ma after CAI formation, $X_{S,0}$=[27.1,30.05,33] wt%, all other parameters are median values from Sanderson et. al. 2024 (EPSL. in review). For runs 1-6, odd number runs have $m_{frac}=0$ and even number runs have $m_{frac}=1$. Run 7 is same the parameters as run 4, but the additional buoyancy source from solidification has been removed. In run 7, solidification only decreases convective lengthscale mimicing the scenario of a stratified core solidifying inwards.\n",
     "\n",
     "+ [Summary stats](#stats)\n",
     "+ [Temperature profile](#temp)\n",
@@ -56,7 +56,7 @@
    "source": [
     "Choose run for main thermal plots and where to save files.\n",
     "\n",
-    "Run 3 and 4 are runs that include $^{60}Fe$ but have all other parameters the same as Dodds 2021. Run 4 has $m_{frac}$=1 so use as default for plotting."
+    "Run 4 has $m_{frac}$=1 and the median value of $X_{S,0}$ so use as default for plotting."
    ]
   },
   {
@@ -66,12 +66,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run=6\n",
-    "save = False# do you want to save your figures?\n",
-    "automated = False \n",
+    "run=4\n",
+    "save = True# do you want to save your figures?\n",
+    "automated = True\n",
     "log_time = True #do you want to plot time logarithmically\n",
-    "#path = '../Results_combined/Dodds_comp/' #path to files\n",
-    "path = '../Results_combined/'\n",
+    "path = '../Results_combined/Dodds_comp/' #path to files\n",
     "save_path = '../Plots/Icarus_paper/'"
    ]
   },
@@ -324,7 +323,8 @@
     "if on2 > 0:\n",
     "    print(f'The second dynamo starts at {on2:.2f} Myr, stops at {off2:.2f} Myr and lasts {off2-on2:.2f} Myr')\n",
     "if on3 > 0:\n",
-    "    print(f'The third dynamo starts at {on3:.2f} Myr, stops at {off3:.2f} Myr and lasts {off3-on3:.2f} Myr')"
+    "    print(f'The third dynamo starts at {on3:.2f} Myr, stops at {off3:.2f} Myr and lasts {off3-on3:.2f} Myr')\n",
+    "print(f\"Core solidification begins at {results.at[0,'tsolid_start']:.2f} Ma and ends at {results.at[0,'tsolid']:.2f} Ma\")"
    ]
   },
   {
@@ -395,7 +395,17 @@
     "    on3l = on3\n",
     "    off1l = off1\n",
     "    off2l = off2\n",
-    "    off2l = off3"
+    "    off3l = off3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "737214a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "off2l"
    ]
   },
   {
@@ -498,9 +508,9 @@
     "rcmf = params['rcmf'].values[0]\n",
     "for i in range(rlen):\n",
     "    trcmf[i]=tall[Tall[nmantle+i,:]>(rcmf*(400)+1400)][-1]\n",
-    "\n",
+    "max_rcmf = np.max(trcmf/Myr-tacc)\n",
     "print(f'The shortest time before T<T_C is {np.min(trcmf/Myr-tacc):.2f} Ma \\\n",
-    "and the longest time before T<T_C is {np.max(trcmf/Myr-tacc):.2f} Ma')"
+    "and the longest time before T<T_C is {max_rcmf:.2f} Ma')"
    ]
   },
   {
@@ -533,6 +543,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "db0c20a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "29c1b2fc",
    "metadata": {},
    "outputs": [],
@@ -547,10 +567,9 @@
     "plt.plot(t_plot_t,Tc,label='central core temperature',color='black')\n",
     "plt.plot(t_plot_t[Tm_conv!=0],Tm_conv[Tm_conv!=0],label='convective mantle temperature',color='#FF5350')\n",
     "plt.plot(t_plot_t[Tm_conv==0],T_profile[Tm_conv==0,nmantle+dl_end+2],label='conductive mantle temperature',color='#FF5350',linestyle='dashed')\n",
-    "plt.plot(t_plot_t,Tcmb)\n",
     "if log_time == True:\n",
     "    plt.xscale('log')\n",
-    "plt.ylim([1300,1550])\n",
+    "plt.ylim([1250,1550])\n",
     "plt.ylabel('T/K')\n",
     "plt.legend(loc='lower left')\n",
     "\n",
@@ -615,7 +634,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Xs_eutectic = 32 "
+    "Xs_eutectic = 33\n",
+    "print(f'The core reaches the eutectic at {t_plot_t[Xs>=Xs_eutectic][0]:.2f} Ma')"
    ]
   },
   {
@@ -692,7 +712,7 @@
     "ax[1].set(xscale='log',ylim=[1e-11,1e-8],ylabel='Buoyancy flux per unit area /kg$s^{-1}m^{-2}$',xlabel='Time/Ma')\n",
     "\n",
     "if save == True:\n",
-    "    plt.savefig(f'{save_path}run_{run}_Bbuoy.png',dpi=500)"
+    "    plt.savefig(f'{save_path}run_{run}_Bbuoy.pdf',dpi=500)"
    ]
   },
   {
@@ -713,6 +733,106 @@
     "         [Xs[f<f0]<Xs_eutectic],color='blue')\n",
     "ax3.set_yscale('log')\n",
     "ax3.set_ylabel('Compositional/Thermal buoyancy flux')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f13a8b1",
+   "metadata": {},
+   "source": [
+    "### What is the peak field strength in each epoch?\n",
+    "Put in times by eye from plot above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "206c5324",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tsolid_start = results.at[0,'tsolid_start']\n",
+    "peakB = []\n",
+    "peakB.append(np.max(B[t_plot_t<10]))\n",
+    "peakB.append(np.max(B[(t_plot_t>10)&(t_plot_t<200)]))\n",
+    "peakB.append(np.max(B[(t_plot_t>200)&(t_plot_t<tsolid_start)]))\n",
+    "peakB.append(np.max(Bdf.rolling(window=wn,center=True).mean()))\n",
+    "for i, Bval in enumerate(peakB):\n",
+    "    print(f\"The peak field strength in regime {i+1} is {Bval:.2f} muT\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0089aa52",
+   "metadata": {},
+   "source": [
+    "### What causes the different trends in field generation?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4984d1f5",
+   "metadata": {},
+   "source": [
+    "Early times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "000025c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1,1)\n",
+    "ax1 = ax.twinx()\n",
+    "ln1 = ax.plot(t_plot_t,Tcmb-Tm_conv,color='black')\n",
+    "ln2 = ax1.plot(t_plot_t,dl/1e3,color='darkorchid',linestyle='dashed')\n",
+    "ax.set(ylim=[0,10],xscale='log',xlim=[0.8,40],xlabel='Time/Ma',ylabel='$T_{CMB}-T_{m,conv}$/K')\n",
+    "ax1.set(ylabel='$\\delta_l$/km',ylim=[0,5])\n",
+    "ax1.tick_params(axis='y',colors='darkorchid') \n",
+    "ax1.yaxis.label.set_color('darkorchid') \n",
+    "ax.legend(ln1+ln2,['$T_{CMB}-T_{m,conv}$','$\\delta_l$'])\n",
+    "if save == True:\n",
+    "    plt.savefig(f'{save_path}run_{run}_deltal.png',dpi=500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13d303db",
+   "metadata": {},
+   "source": [
+    "Epoch 1 (until 14Ma): lid thickens so $F_{CMB}$ decreases. There is a jump in lid thickness and decrease in $F_{CMB}$ at 14Ma after CAI when the base of the mantle goes below $\\phi_C$. This leads to an increased temperature difference between the core and mantle, which counteracts the increase in viscosity is balanced to give the decrease in $\\delta_l$ from 14-20Ma before lid thickness then increases again."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d55369e6",
+   "metadata": {},
+   "source": [
+    "Late times - why does strength increase before the onset of core solidification?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4fcc7b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1,1)\n",
+    "ln1 = ax.plot(t_plot_t,Tcmb-T_profile[:,nmantle+1],color='black')\n",
+    "ax.set(ylim=[0,3],xlim=[on2,tsolid_start],xlabel='Time/Ma',ylabel='$T_{CMB}-T_{m,CMB+1}$ /K')\n",
+    "if save == True:\n",
+    "    plt.savefig(f'{save_path}run_{run}_deltal.png',dpi=500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14272056",
+   "metadata": {},
+   "source": [
+    "Temperature difference between the CMB and one cell above the CMB increases, which drives the increase in $F_{CMB}$ and field strength. This is due to increased efficiency of mantle cooling as shallower layers of the mantle cool more."
    ]
   },
   {
@@ -739,7 +859,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run = 7\n",
+    "run = 3\n",
     "if automated == True:\n",
     "    r_run2, dr2, tstart2, dt2, viscosity2, icfrac2 = load_run_info(run,f'{path}auto_params.csv')\n",
     "else:\n",
