Updated core geometry plots

--- a/Plotting_scripts/Icarus_paper_plots.ipynb
+++ b/Plotting_scripts/Icarus_paper_plots.ipynb
@@ -20,7 +20,7 @@
     "### Core solidification discussion\n",
     "+ [Convective lengthscales](#conv)\n",
     "    + [Ratio of lengthscales to B and Rem](#ratio)\n",
-    "+ [Thermal vs compositional dynamo field strength](#Bcomp)\n"
+    "+ [Thermal vs compositional dynamo field strength](#therm-comp)\n"
    ]
   },
   {
@@ -399,16 +399,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "737214a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "off2l"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e037eae4",
    "metadata": {},
@@ -538,16 +528,6 @@
    "outputs": [],
    "source": [
     "log_time = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db0c20a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save = False"
    ]
   },
   {
@@ -915,7 +895,7 @@
    "outputs": [],
    "source": [
     "wn = 200 #averaging window width\n",
-    "fig, ax = plt.subplots(nrows=2,ncols=1,sharex='col',figsize=[10,6])\n",
+    "fig, ax = plt.subplots(nrows=2,ncols=1,sharex='col',figsize=[5,6])\n",
     "#B and Rem\n",
     "t_plot_solid = t_plot_t[f<f0]\n",
     "t_plot_solid2 = t_plot_t2[f2<f0]\n",
@@ -938,9 +918,9 @@
     "\n",
     "ax[1].hlines(10,min(t_plot_t[f<f0]),max(t_plot_t),linestyle='dashed',color='grey')\n",
     "ax[0].legend(ln1+ln2,[f'$m_{{frac}}$={icfrac:.0g}',f'$m_{{frac}}$={icfrac2:.0g}'])\n",
-    "ax[1].legend(ln3+ln4,[f'$m_{{frac}}$={icfrac:.0g}',f'$m_{{frac}}$={icfrac2:.0g}'])\n",
+    "#ax[1].legend(ln3+ln4,[f'$m_{{frac}}$={icfrac:.0g}',f'$m_{{frac}}$={icfrac2:.0g}'])\n",
     "ax[0].set_ylabel('Magnetic field \\n strength/ $\\mu T$')\n",
-    "ax[1].set(xlabel='Time /Ma',ylabel='$Re_m$')\n",
+    "ax[1].set(xlabel='Time /Ma',ylabel='$Re_m$',xlim=[350,550])\n",
     "if save == True:\n",
     "    plt.savefig(f'{save_path}Bendmember.png',dpi=500)"
    ]
@@ -1062,16 +1042,19 @@
    "source": [
     "fig, ax = plt.subplots(nrows=1,ncols=1)\n",
     "ax1 = ax.twinx()\n",
+    "c2 = '#0079cb'\n",
     "# x = 0\n",
-    "ax.plot(t_plot_t[(Xs<Xs_eutectic)&(f<f0)],r1val1-r2val1,label=f'x={icfrac}',color='#0000ca')\n",
-    "ax1.plot(t_plot_t[(Xs<Xs_eutectic)&(f<f0)],r1val1/f[(Xs<Xs_eutectic)&(f<f0)],linestyle='dashed',color='#0000ca')\n",
-    "#x =1 \n",
-    "ax.plot(t_plot_t2[(Xs2<Xs_eutectic)&(f2<f0)],r1val2-r2val2,label=f'x={icfrac2}',color='#0079cb')\n",
-    "ax1.plot(t_plot_t2[(Xs2<Xs_eutectic)&(f2<f0)],r1val2/f2[(Xs2<Xs_eutectic)&(f2<f0)],linestyle='dashed',color='#0079cb')\n",
+    "ax.plot(t_plot_t2[(Xs2<Xs_eutectic)&(f2<f0)],r1val2-r2val2,label=f'$m_{{frac}}$={icfrac2}',color='#0000ca')\n",
+    "ax1.plot(t_plot_t2[(Xs2<Xs_eutectic)&(f2<f0)],r1val2/f2[(Xs2<Xs_eutectic)&(f2<f0)],color=c2)\n",
+    "# x = 1\n",
+    "ax.plot(t_plot_t[(Xs<Xs_eutectic)&(f<f0)],r1val1-r2val1,label=f'$m_{{frac}}$={icfrac}',color='#0000ca',linestyle='dashed')\n",
+    "ax1.plot(t_plot_t[(Xs<Xs_eutectic)&(f<f0)],r1val1/f[(Xs<Xs_eutectic)&(f<f0)],linestyle='dashed',color=c2)\n",
     "\n",
     "ax.set_xlabel('Time /Ma')\n",
     "ax.set_ylabel('Convective lengthscale /r$_c$')\n",
     "ax1.set_ylabel('$r_1$/$r_i$ ')\n",
+    "ax1.tick_params(axis='y',colors=c2) \n",
+    "ax1.yaxis.label.set_color(c2) \n",
     "ax.legend(loc='center left')\n",
     "ax.set_ylim([0,1])\n",
     "if save == True:\n",
@@ -1086,41 +1069,6 @@
     "There is a 5% difference between $r_i$ (inner core radius for concentric inward) and $r_1$ (outer core radius with passive inner core) even for the endmember where all the mass ends up in the passive inner core so it is reasonable to approximate them as the same.\n",
     "\n",
     "The overall convective lengthscale is reduced by a factor of 0.6 from x=0 to x=1.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5ed3c68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(nrows=1,ncols=1)\n",
-    "#x = 0\n",
-    "ax.plot(t_plot_t[Xs<Xs_eutectic],f[Xs<Xs_eutectic],label='f',color='black',linestyle='dashed')\n",
-    "ax.plot(t_plot_t[(Xs<Xs_eutectic)&(f<f0)],r1val1,label='x=0 r$_1$/r$_c$',color='#0000ca')\n",
-    "# x = 0.5 simulated\n",
-    "ax.plot(t_plot_t[(Xs2<Xs_eutectic)&(f<f0)],r1val3,label='x=0.5 r$_1$/r$_c$',color='forestgreen',linestyle='dashed')\n",
-    "ax.plot(t_plot_t2[(Xs2<Xs_eutectic)&(f<f0)],r2val3,label='x=0.5 r$_2$/r$_c$',color='forestgreen')\n",
-    "\n",
-    "# x= 1\n",
-    "ax.plot(t_plot_t2[(Xs2<Xs_eutectic)&(f2<f0)],r2val2,label='x=1 r$_2$/r$_c$',color='#0079cb')\n",
-    "\n",
-    "ax.set_xlabel('Time /Ma')\n",
-    "ax.set_ylabel('Fractional distance from core centre')\n",
-    "\n",
-    "ax.legend(loc='center left')\n",
-    "ax.set_ylim([0,1])\n",
-    "if save == True:\n",
-    "    plt.savefig(f'{save_path}convlp5.png',dpi=450)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8996ff07",
-   "metadata": {},
-   "source": [
-    "Effect of r1 on convective lengthscale is neglible but r2 is important. *Not sure if this plot is required.*"
    ]
   },
   {
@@ -1163,24 +1111,183 @@
     "ln3 = ax[0].plot(((r1val1-r2val1)/(r1val2-r2val2))[int(wn/2):],(((r1val1-r2val1)/(r1val2-r2val2))**(-0.24))[int(wn/2):],color='#0079cb',linestyle='dashed')\n",
     "ln4 = ax[1].plot(((r1val1-r2val1)/(r1val2-r2val2))[int(wn/2):],(((r1val1-r2val1)/(r1val2-r2val2))**(0.32))[int(wn/2):],linestyle='dashed',color='#0079cb')\n",
     "\n",
-    "ax[0].set_ylabel('$B_{x=0}/B_{x=1}$')\n",
-    "ax[1].set_ylabel('$Re_{m,x=0}/Re_{m,x=1}$')\n",
-    "ax[1].set_xlabel('$l_{x=0}/l_{x=1}$')\n",
+    "ax[0].set_ylabel('$B_0/B_1$')\n",
+    "ax[1].set_ylabel('$Re_{m,0}/Re_{m,1}$')\n",
+    "ax[1].set_xlabel('$l_0/l_1$')\n",
     "\n",
-    "ax[0].set_xscale('log')\n",
-    "ax[0].set_yscale('log')\n",
-    "ax[1].set_yscale('log')\n",
+    "#ax[0].set_xscale('log')\n",
+    "#ax[0].set_yscale('log')\n",
+    "#ax[1].set_yscale('log')\n",
     "\n",
-    "ax[0].legend(ln1+ln3,['Model output','$(B_{x=0}$/$B_{x=1}$ $\\propto$ $l_{x=0}$/$l_{x=1})^{-0.24}$'])\n",
-    "ax[1].legend(ln2+ln4,['Model output','$B_{x=0}$/$B_{x=1}$ $\\propto$ $(l_{x=0}/l_{x=1})^{0.32}$'])\n",
+    "ax[0].legend(ln1+ln3,['Model output','$(B_0}$/$B_1$ $\\propto$ $l_0$/$l_1)^{-0.24}$'])\n",
+    "ax[1].legend(ln2+ln4,['Model output','$Re_{m,0}/Re_{m,1} \\propto (l_0/l_1)^{0.32}$'])\n",
     "if save == True:\n",
     "    plt.savefig(f'{save_path}Bratios.png',dpi=450)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aa06f852",
+   "metadata": {},
+   "source": [
+    "## Thermal vs compositional dynamos  <a class=\"anchor\" id=\"therm-comp\"></a>\n",
+    "<p align=\"right\">(<a href=\"#top\">back to top</a>)</p>\n",
+    "Compare three runs with same geometry, but different sulfur contents. Run 6 solidification is eutectic so doesn't generate buoyancy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d08174d5",
+   "metadata": {},
+   "source": [
+    "Import 27 wt% run"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "790b755b",
+   "id": "ac9315c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run = 2\n",
+    "npzfile = np.load(f'{path}run_{run}.npz')\n",
+    "\n",
+    "f3 = npzfile['f'] \n",
+    "t3 = npzfile['t'] #time in s\n",
+    "Rem3 = npzfile['Rem'] # magnetic Reynolds number \n",
+    "B3 = npzfile['B']/1e-6 # magnetic field strength [T] \n",
+    "buoyr3 = npzfile['buoyr'] #compositional buoyancy flux and thermal buoyancy flux\n",
+    "Xs3 = npzfile['Xs']\n",
+    "t_plot_t3 = t3/Myr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfc65c06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comp3 = buoyr3[0,:]\n",
+    "therm3 = buoyr3[1,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f84cc4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compdf3 = pd.Series(comp3[f3<f0])\n",
+    "thermdf3 = pd.Series(therm3[f3<f0])\n",
+    "Remdf3 = pd.Series(Rem3[f3<f0])\n",
+    "Bdf3 = pd.Series(B3[f3<f0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c961dac5",
+   "metadata": {},
+   "source": [
+    "Import eutectic run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b42d5ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run = 6\n",
+    "\n",
+    "npzfile = np.load(f'{path}run_{run}.npz')\n",
+    "\n",
+    "f4 = npzfile['f'] \n",
+    "t4 = npzfile['t'] #time in s\n",
+    "Rem4 = npzfile['Rem'] # magnetic Reynolds number \n",
+    "B4 = npzfile['B']/1e-6 # magnetic field strength [T] \n",
+    "buoyr4 = npzfile['buoyr'] #compositional buoyancy flux and thermal buoyancy flux\n",
+    "Xs4 = npzfile['Xs']\n",
+    "t_plot_t4 = t4/Myr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3f9c77d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wn = 200 #averaging window width\n",
+    "c2= '#DAC800'\n",
+    "c1 = '#CA7800' #highest S content\n",
+    "c3='#4F4F4F' #lowest S content\n",
+    "fig, ax = plt.subplots(nrows=2,ncols=1,sharex='col',figsize=[10,6])\n",
+    "#scale solidification time\n",
+    "t_plot_solid = t_plot_t[f<f0]\n",
+    "t_plot_solid3 = t_plot_t3[f3<f0]\n",
+    "\n",
+    "# B \n",
+    "#non-eutectic - 27.1wt%\n",
+    "ln0 = ax[0].plot(t_plot_t3[f3>=f0],np.ma.masked_where(Rem3[f3>=f0]<10,B3[f3>=f0]),color=c3)\n",
+    "ax[0].plot(t_plot_t3[f3<f0],np.ma.masked_where(Rem3[f3<f0]<10,B3[f3<f0]),color=c3,alpha=0.1) #original series\n",
+    "ax[0].plot(np.ma.masked_where(Remdf3.rolling(window=wn,center=True).mean()<10,t_plot_solid3),\\\n",
+    "                 np.ma.masked_where(Remdf3.rolling(window=wn,center=True).mean()<10,Bdf3.rolling(window=wn,center=True).mean()),\\\n",
+    "                 color=c3)\n",
+    "#non-eutectic - 30.05wt%\n",
+    "ax[0].plot(t_plot_t[f>=f0],np.ma.masked_where(Rem[f>=f0]<10,B[f>=f0]),color=c1)\n",
+    "ax[0].plot(t_plot_t[f<f0],np.ma.masked_where(Rem[f<f0]<10,B[f<f0]),color=c1,alpha=0.1) #original series\n",
+    "ln1 = ax[0].plot(np.ma.masked_where(Remdf.rolling(window=wn,center=True).mean()<10,t_plot_solid),\\\n",
+    "                 np.ma.masked_where(Remdf.rolling(window=wn,center=True).mean()<10,Bdf.rolling(window=wn,center=True).mean()),\\\n",
+    "                 color=c1)\n",
+    "#eutectic\n",
+    "ln2 = ax[0].plot(t_plot_t4,np.ma.masked_where(Rem4<10,B4),color=c2) \n",
+    "\n",
+    "#Rem\n",
+    "#non-eutectic - 27.1 wt%\n",
+    "ax[1].plot(t_plot_t3[f3>=f0],Rem3[f3>=f0],color=c3)\n",
+    "ax[1].plot(t_plot_solid3, Remdf3.rolling(window=wn,center=True).mean(),color=c3)\n",
+    "ax[1].plot(t_plot_t3[f3<f0],Rem3[f3<f0],color=c3,alpha=0.1) #original series\n",
+    "#non-eutectic - 30.05 wt%\n",
+    "ax[1].plot(t_plot_t[f>=f0],Rem[f>=f0],color=c1)\n",
+    "ax[1].plot(t_plot_solid, Remdf.rolling(window=wn,center=True).mean(),color=c1)\n",
+    "ax[1].plot(t_plot_t[f<f0],Rem[f<f0],color=c1,alpha=0.1) #original series\n",
+    "#eutectic\n",
+    "ax[1].plot(t_plot_t4,Rem4,color=c2) \n",
+    "\n",
+    "ax[1].hlines(10,min(t_plot_t),max(t_plot_t),linestyle='dashed',color='grey')\n",
+    "ax[0].legend(ln0+ln1+ln2,[f'X$_{{s,0}}$={Xs3[0]:.1f} wt%',f'X$_{{s,0}}$={Xs[0]:.1f} wt%','Eutectic $X_{S,0}$'],loc='lower left')\n",
+    "ax[0].set(ylabel='Magnetic field \\n strength/ $\\mu T$',ylim=[0,20])\n",
+    "ax[1].set(xlabel='Time /Ma',ylabel='$Re_m$',xscale='log',ylim=[0,150])\n",
+    "if save == True:\n",
+    "    plt.savefig(f'{save_path}Bnobuoy.pdf',dpi=500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8027abc4",
+   "metadata": {},
+   "source": [
+    "What is the difference in field strength when the compositional field is maximal?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35e3d77d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.max(Bdf3.rolling(window=wn,center=True).mean())/B4[t_plot_t4>t_plot_solid3[0]][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d362a99",
    "metadata": {},
    "outputs": [],
    "source": []
