Change axis limit on endmember plot

--- a/Plotting_scripts/Icarus_paper_plots.ipynb
+++ b/Plotting_scripts/Icarus_paper_plots.ipynb
@@ -915,12 +915,11 @@
     "#icfrac = 1\n",
     "#ln4 = ax[1].plot(t_plot_t2[f2>=f0],Rem2[f2>=f0],color='#0079cb')\n",
     "ln4 = ax[1].plot(t_plot_t2[f2<f0],Remdf2.rolling(window=wn,center=True).mean(),color='#0079cb')\n",
-    "\n",
     "ax[1].hlines(10,min(t_plot_t[f<f0]),max(t_plot_t),linestyle='dashed',color='grey')\n",
     "ax[0].legend(ln1+ln2,[f'$m_{{frac}}$={icfrac:.0g}',f'$m_{{frac}}$={icfrac2:.0g}'])\n",
     "#ax[1].legend(ln3+ln4,[f'$m_{{frac}}$={icfrac:.0g}',f'$m_{{frac}}$={icfrac2:.0g}'])\n",
     "ax[0].set_ylabel('Magnetic field \\n strength/ $\\mu T$')\n",
-    "ax[1].set(xlabel='Time /Ma',ylabel='$Re_m$',xlim=[350,550])\n",
+    "ax[1].set(xlabel='Time /Ma',ylabel='$Re_m$',xlim=[350,575])\n",
     "if save == True:\n",
     "    plt.savefig(f'{save_path}Bendmember.png',dpi=500)"
    ]
@@ -1030,7 +1029,7 @@
    "id": "a82f67f3",
    "metadata": {},
    "source": [
-    "Make plots"
+    "Make plots - make sure first and second run simported are 27.1 wt%"
    ]
   },
   {
@@ -1044,8 +1043,8 @@
     "ax1 = ax.twinx()\n",
     "c2 = '#0079cb'\n",
     "# x = 0\n",
-    "ax.plot(t_plot_t2[(Xs2<Xs_eutectic)&(f2<f0)],r1val2-r2val2,label=f'$m_{{frac}}$={icfrac2}',color='#0000ca')\n",
-    "ax1.plot(t_plot_t2[(Xs2<Xs_eutectic)&(f2<f0)],r1val2/f2[(Xs2<Xs_eutectic)&(f2<f0)],color=c2)\n",
+    "ax.plot(t_plot_t[(Xs<Xs_eutectic)&(f<f0)],r1val2-r2val2,label=f'$m_{{frac}}$={icfrac2}',color='#0000ca')\n",
+    "ax1.plot(t_plot_t[(Xs<Xs_eutectic)&(f<f0)],r1val2/f2[(Xs2<Xs_eutectic)&(f2<f0)],color=c2)\n",
     "# x = 1\n",
     "ax.plot(t_plot_t[(Xs<Xs_eutectic)&(f<f0)],r1val1-r2val1,label=f'$m_{{frac}}$={icfrac}',color='#0000ca',linestyle='dashed')\n",
     "ax1.plot(t_plot_t[(Xs<Xs_eutectic)&(f<f0)],r1val1/f[(Xs<Xs_eutectic)&(f<f0)],linestyle='dashed',color=c2)\n",
